# Crypto-View

./: README.md  pyproject.toml  requirements.txt
bot/app/: app.py
bot/app/handlers/: __init__.py  root_handler.py
src/: __main__.py  config_reader.py
src/app/: app.py
src/app/handlers/: home_handler.py
src/global/: index.html
src/global/assets/css/: style.css
src/global/assets/js/: index.js
